WW-3984 Adds support for Convention plugin which based on actions in a Jar file embedded in Ear file on JBoss 5 server
git-svn-id: https://svn.apache.org/repos/asf/struts/struts2/trunk@1447442 13f79535-47bb-0310-9956-ffa450edef68